--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,22 @@
+## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+
+spring.datasource.url = jdbc:postgresql://${DBHOST}:${DBPORT}/${DATABASE}
+
+spring.datasource.username = ${DBUSER}
+
+spring.datasource.password = ${DBPASSWORD}
+
+## hibernate Properties
+
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+ 
+
+# hibernate ddl auto (create, create-drop, validate, update)
+
+spring.jpa.hibernate.ddl-auto = update
+
+server.port = 8081
 
